[package]
name = "vesta_example"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
env_logger = "0.8"
log = "0.4"
wgpu = "0.7"
cgmath = "0.18"
vesta = { path = "../vesta" }