[package]
name = "vesta_example"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2018"
resolver="2"

[dependencies]
vesta = { path = "../vesta" }
futures = "0.3"
env_logger = "0.9"
log = "0.4"

# Web Assembly
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.74"