[package]
name = "titan"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

[dependencies]
bevy = "0.10.0"      
bevy_egui = "0.20.1"      
bevy_atmosphere = "0.6.0"
bevy_rapier3d = { version = "0.21.0", features = [ "simd-stable", "debug-render" ] }                                                              # Actual Game Engine
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras" }     # Nice cameras for moving around
bracket-noise = "0.8.7"
rand = "0.8.5"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# High performance for release, slow compile times
[profile.release]
lto = "thin"
codegen-units = 1
