[package]
name = "vesta"
version = "0.4.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

[dependencies]
winit = "0.25"
wgpu = "0.11"
image = "0.23"
cgmath = { version = "0.18", features = [ "swizzle" ] }
bytemuck = { version = "1.7.2", features = [ "derive" ] }
anyhow = "1.0.45"

# GUI
egui = "0.15"
egui_wgpu_backend = "0.14"
egui_winit_platform = "0.11"


# Web Assembly
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
winit = { version = "0.25", features = [ "web-sys" ] }
