[package]
name = "vesta"
version = "0.4.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

[dependencies]
winit = "0.26.0"
wgpu = "0.12.0"
image = "0.23.14"
cgmath = { version = "0.18.0", features = [ "swizzle" ] }
bytemuck = { version = "1.7.3", features = [ "derive" ] }
crevice = { version = "0.8.0", features = [ "cgmath" ] }

anyhow = "1.0.51"

futures = "0.3.19"

# Custom timing that supports WASM
instant = "0.1.12"

# Logging
log = "0.4.14"
env_logger = "0.9.0"

# GUI
egui = "0.15"
egui_wgpu_backend = "0.15.0"
egui_winit_platform = "0.12.0"

# Web Assembly
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.12.0", features = [ "webgl" ]}
wasm-bindgen = "0.2.78"
web-sys = "0.3.55"

wasm-bindgen-futures = "0.4.28"

# Custom timing that supports WASM
instant = { version = "0.1.12", features = [ "stdweb" ] }

# Logging
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
