[package]
name = "eris"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vesta = { path = "../../vesta" }
env_logger = "0.9"
log = "0.4"
bracket-noise = "0.8.2"
