[package]
name = "eris"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vesta = { path = "../../vesta" }
bracket-noise = "0.8.2"
crevice = { version = "0.8.0", features = [ "cgmath" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
