[package]
name = "mm"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.1"
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
bevy-inspector-egui = "0.18.0"
bevy_hanabi = "0.6.1"
bevy_particle_systems = "0.9.0"
bracket-noise = "0.8.7"
bracket-random = "0.8.7"
simdnoise = "3.1.6"
simple-simplex = "1.0.3"
bevy_pixel_camera = "0.4"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# High performance for release, slow compile times
[profile.release]
lto = "thin"
codegen-units = 1
