[package]
name = "pixel_2d"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

[dependencies]
vesta = { path = "../../vesta" }
bracket-noise = "0.8.2"
rand = "0.8.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
